--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ nav ul {
     display: flex;
     justify-content: center;
     gap: 1.5rem;
-    flex-wrap: wrap; /* keep wrapping if screen too small */
+    flex-wrap: wrap; 
     list-style: none;
     padding: 0;
     margin: 0;
@@ -48,6 +48,7 @@ main {
     flex-direction: column;
     gap: 3rem;
 }
+
 
 .hero {
     display: flex;
@@ -192,16 +193,16 @@ main {
 
 .project-item .image-placeholder {
   width: 100%;
-  max-width: 500px;
+  max-width: 500px; 
   border-radius: 0.5rem;
   overflow: hidden;
-  border: 1px solid #9ca3af;
 }
 
 .project-item .image-placeholder img {
   width: 100%;
   height: auto;
-  object-fit: contain;
+  object-fit: cover;
+  display: block;
 }
 
 .project-item .text-placeholder {
@@ -270,4 +271,3 @@ footer {
         padding: 2rem;
     }
 }
-
