--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,6 @@ header {
 
 nav {
     flex-grow: 1;
-    display: flex;
-    justify-content: center;
 }
 
 header .switch {
@@ -41,12 +39,14 @@ header .switch {
 
 nav ul {
     display: flex;
+    justify-content: center;   
+    align-items: center;
     gap: 1.5rem;
-    flex-wrap: wrap; 
-    justify-content: center;
-    list-style: none;
+    flex-wrap: wrap;           
     padding: 0;
-    margin: 0;
+    margin: 0 auto;           
+    width: 100%;             
+    text-align: center;
 }
 nav ul li a {
     color: #1f2937;
